Latest update with link fixed

--- a/DP_WK2_VisProduct.Rmd
+++ b/DP_WK2_VisProduct.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Products Wk2 Assignment"
+title: "Data Products Week 2 Assignment"
 author: "Kelvin Leung"
 date: "7/23/2018"
 output: ioslides_presentation
@@ -9,27 +9,22 @@ output: ioslides_presentation
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-## Developing Data Products 
-### WeeK 2 Assignment
-
-```{r}
+```{r eval=TRUE}
 library(leaflet)
 ```
 
-## Create the map of Hong Kong
-```{r hongkongMap}
-my_map <- leaflet() %>%
-    addTiles()
-my_map
-```
-
-## `r format(Sys.time(), "%a %b %d  %Y")`
+## `r format(Sys.Date(), "%a %b %d %Y")`
+Interactive Map of Hong Kong 
 ```{r HKairport}
 thePeak <- c("<a href='https://www.thepeak.com.hk/en/2_1.asp'>The Peak, Hong Kong</a>")
 hkAirport <- c("<a href='https://www.hongkongairport.com/'>Hong Kong International Airport</a>")
+kowloonWalledCity <- c("<a href='https://en.wikipedia.org/wiki/Kowloon_Walled_City'>Kowloon Walled City (from Wikipeidia)</a>"
+
+)
 leaflet() %>% 
     addTiles() %>%
     addMarkers(lat=22.2759, lng=114.1455, popup=thePeak) %>%
-    addMarkers(lat=22.3080, lng=113.9185, popup=hkAirport)
+    addMarkers(lat=22.3080, lng=113.9185, popup=hkAirport) %>%
+    addMarkers(lat=22.3260336959, lng=114.186529254, popup=kowloonWalledCity)
 ```    
 
